--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
+alembic==0.6.2
+bleach==1.4.1
+blinker==1.3
 Flask==0.10.1
+Flask-Admin==1.2.0
 Flask-Bootstrap==3.0.3.1
 Flask-Login==0.2.7
 Flask-Mail==0.9.0
 Flask-Migrate==1.1.0
 Flask-Moment==0.2.1
-Flask-SQLAlchemy==1.0
+Flask-PageDown==0.2.1
 Flask-Script==0.6.6
+Flask-SQLAlchemy==1.0
 Flask-WTF==0.8
+html5lib==0.99999
+itsdangerous==0.23
 Jinja2==2.7.1
 Mako==0.9.1
+Markdown==2.6.2
 MarkupSafe==0.18
+mysql-connector-python==2.0.4
+MySQL-python==1.2.5
+optional-django==0.1.0
+six==1.9.0
 SQLAlchemy==0.8.4
-WTForms==1.0.5
 Werkzeug==0.9.6
-alembic==0.6.2
-blinker==1.3
-itsdangerous==0.23
-wsgiref==0.1.2
+wheel==0.24.0
+WTForms==1.0.5
