--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-PageDown==0.2.1
 Flask-Script==0.6.6
 Flask-SQLAlchemy==1.0
 Flask-WTF==0.8
+gunicorn==18.0
 html5lib==0.99999
 itsdangerous==0.23
 Jinja2==2.7.1
@@ -21,6 +22,7 @@ MarkupSafe==0.18
 mysql-connector-python==2.0.4
 MySQL-python==1.2.5
 optional-django==0.1.0
+psycopg2==2.6.1
 six==1.9.0
 SQLAlchemy==0.8.4
 Werkzeug==0.9.6
