--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.6.2
 bleach==1.4.1
 blinker==1.3
+click==6.2
 Flask==0.10.1
 Flask-Admin==1.2.0
 Flask-Bootstrap==3.0.3.1
@@ -23,7 +24,10 @@ mysql-connector-python==2.0.4
 MySQL-python==1.2.5
 oauthlib==1.0.3
 optional-django==0.1.0
+ordereddict==1.1
 psycopg2==2.6.1
+python-dotenv==0.3.0
+python-ldap==2.4.22
 requests==2.9.1
 requests-oauthlib==0.6.0
 six==1.9.0
